--- a/css/style.css
+++ b/css/style.css
@@ -767,24 +767,24 @@ img {
     margin-right: 5px;
 }
 //-------------------------//
-/* Samo za mobilne uređaje */
 @media (max-width: 768px) {
     #simple-lightbox {
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
 
-    #lightbox-image {
+    #simple-lightbox img {
         max-width: 90%;
         height: auto;
     }
 
     #lightbox-caption {
-        order: 2;  /* Stavi caption ispod slike */
+        order: 2; /* Baci caption ispod slike */
         width: 100%;
         text-align: center;
         margin-top: 10px;
-    }
-}
+        background-color: rgba(0, 0, 0, 0.7); /* tamna podloga ispod teksta*
+
 //-------------------------//
