--- a/css/style.css
+++ b/css/style.css
@@ -788,3 +788,52 @@ img {
         background-color: rgba(0, 0, 0, 0.7); /* tamna podloga ispod teksta*
 
 //-------------------------//
+        @media (max-width: 768px) {
+    #simple-lightbox {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #simple-lightbox img {
+        max-width: 90%;
+        max-height: 80vh;
+        margin-bottom: 10px;
+    }
+
+    #lightbox-caption {
+        width: 100%;
+        margin-top: 10px;
+        text-align: center;
+        color: #fff;
+    }
+
+    .lightbox-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        font-size: 2.5rem;
+        color: #fff;
+        cursor: pointer;
+    }
+
+    #lightbox-prev {
+        left: 10px;
+    }
+
+    #lightbox-next {
+        right: 10px;
+    }
+
+    #lightbox-close {
+        position: absolute;
+        top: 10px;
+        right: 20px;
+        font-size: 2.5rem;
+        color: #fff;
+        cursor: pointer;
+    }
+}
+
+//--------------------------//
