--- a/css/style.css
+++ b/css/style.css
@@ -687,6 +687,12 @@ img {
     margin-top: 15px !important;
     text-align: center !important;
   }
+
+  body.lightbox-open-mobile {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
 }
 
 //--------------------------//
