--- a/css/style.css
+++ b/css/style.css
@@ -760,3 +760,10 @@ img {
     margin-right: 5px;
 }
 //-------------------------//
+body.no-scroll {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+//-------------------------//
