--- a/css/style.css
+++ b/css/style.css
@@ -765,5 +765,7 @@ body.no-scroll {
     position: fixed;
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
 }
 //-------------------------//
