--- a/css/style.css
+++ b/css/style.css
@@ -768,4 +768,9 @@ body.no-scroll {
     top: 0;
     left: 0;
 }
+
+html.no-scroll, body.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
 //-------------------------//
